--- a/readme
+++ b/readme
@@ -1,1 +1,8 @@
-ADDVESARIAL EXAMPLES DATASER FOR CFIAR-10
+ADDVESARIAL EXAMPLES DATASET FOR CFIAR-10
+
+
+ extraction of cw2, deepfool,fsgm adversarial images for MNIST DB
+
+thanks to  Zhitao Gong https://zenodo.org/record/1154272#.XcCJiHjPyHs
+
+
