--- a/readme
+++ b/readme
@@ -1,7 +1,7 @@
 ADDVESARIAL EXAMPLES DATASET FOR CFIAR-10
 
 
- extraction of cw2, deepfool,fsgm adversarial images for MNIST DB
+ extraction of cw2, deepfool,fsgm adversarial images for CFIAR-10 Dataset in png
 
 thanks to  Zhitao Gong https://zenodo.org/record/1154272#.XcCJiHjPyHs
 
