--- a/readme
+++ b/readme
@@ -5,4 +5,6 @@ ADDVESARIAL EXAMPLES DATASET FOR CFIAR-10
 
 thanks to  Zhitao Gong https://zenodo.org/record/1154272#.XcCJiHjPyHs
 
+tensorflow 1.11.0
+
 
